--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
 <link rel="stylesheet" type="text/css" href="mystyles.css">
-<title>Time Zone API</title>
+<title>API Books</title>
 </head>
 <body>
 <h1 class="title">API BOOKS</h1>
@@ -12,13 +12,14 @@
 <button type="submit" class="srbook">Submit</button>
 </div>
 <div class="bookDetails">
-<div class="result_cover">Book Cover
-</div>
 
-<div class="result_title">Book Title
-</div>
 
-<div class="result_description">Book Description
+<div>
+<ul class="results">
+
+
+</ul>
+
 </div>
 
 </div>
